Increased padding to make sure translatable text is visible on the vote/translate page

--- a/ot/styles/less/ot.less
+++ b/ot/styles/less/ot.less
@@ -77,7 +77,7 @@ body.translatable {
 	  height: 100%;
 	  z-index: 800;
 	  text-align: center;
-	  padding-top: 60px;
+	  padding-top: 90px;
 	  
 	  > .container {
 	    width: 400px;
